[gd_scene load_steps=2 format=3 uid="uid://cuec7tmvpugyg"]

[ext_resource type="Script" path="res://Scripts/UI Scripts/main_menu.gd" id="1_dffsb"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dffsb")

[node name="Start Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.371
anchor_bottom = 1.0
offset_left = 29.0
offset_top = 68.0
offset_right = 0.0239944
offset_bottom = -96.0
text = "Start"

[node name="Exit Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.367
anchor_bottom = 1.0
offset_left = 28.0
offset_top = 125.0
offset_right = -2.952
offset_bottom = -40.0
scale = Vector2(1.04765, 1.01854)
text = "Quit"

[node name="Fullscreen CheckBox" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -87.0
offset_top = -26.0
offset_right = 20.0
offset_bottom = 5.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.8, 0.8)
text = "Fullscreen
"

[connection signal="pressed" from="Start Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Exit Button" to="." method="_on_exit_button_pressed"]
[connection signal="toggled" from="Fullscreen CheckBox" to="." method="_on_fullscreen_check_box_toggled"]
